# trakt-calendar-sync

./: .gitignore  BUILDING.md  MAINTENANCE.md  README.md  RELEASING.md  pyproject.toml  requirements.txt
.github/workflows/: docker-publish-versioned.yml  docker-publish.yml  release.yml
packaging/: INSTALL_MACOS.md  build.sh  build_windows.ps1  entrypoint.py  make_icons.py  trakt_calendar_sync.spec
resources/: app_icon.icns
scripts/: manual_test_google_calendar.py  manual_test_trakt_auth.py
src/trakt_calendar_sync/: cli_sync.py  config.py  main.py  resources.py
src/trakt_calendar_sync/google_cal/: __init__.py  auth.py  calendar.py
src/trakt_calendar_sync/gui/: app.py  main_window.py  setup_wizard.py
src/trakt_calendar_sync/scheduler/: __init__.py  linux.py  macos.py  windows.py
src/trakt_calendar_sync/sync/: __init__.py  engine.py
src/trakt_calendar_sync/trakt/: __init__.py  auth.py  client.py  exceptions.py
tests/: test_config.py  test_google_auth.py  test_google_calendar.py  test_gui_main_window.py  test_gui_setup_wizard.py  test_scheduler.py  test_sync_engine.py  test_trakt_auth.py  test_trakt_client.py
web/: Dockerfile  README.md  app.py  credentials.json.example  docker-compose.yml  google_oauth_web.py  requirements.txt  scheduler.py  storage.py  sync_web.py
web/static/: style.css
web/templates/: base.html  dashboard.html  setup_google.html  setup_trakt.html  trakt_waiting.html
web/tests/: conftest.py  test_app.py  test_google_oauth_web.py  test_scheduler.py  test_storage.py
